# ClimbQuest

./: .gitignore  .vercelignore  pyproject.toml  vercel.json  vercel_build.py
backend/: .env.example  .gitignore  alembic.ini  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial.py
backend/api/: index.py
backend/app/: config.py  database.py  deps.py  main.py  models.py  schemas.py  security.py
backend/app/routers/: auth.py  routes.py
backend/tests/: conftest.py  test_auth.py  test_routes.py
frontend/: index.html  vite.config.ts
frontend/src/: App.tsx
frontend/src/api/: auth.ts  client.ts  routes.ts
frontend/src/components/: AddRouteModal.tsx  MobileNavbar.tsx  Navbar.tsx  ProtectedRoute.tsx  RouteTable.tsx
frontend/src/context/: AuthContext.tsx
frontend/src/data/: grades.ts
frontend/src/pages/: HomePage.tsx  JournalPage.tsx  LoginPage.tsx  RegisterPage.tsx  RegisterSuccessPage.tsx
